--- a/main_sfdqn.ipynb
+++ b/main_sfdqn.ipynb
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "fd264980",
    "metadata": {},
    "outputs": [
@@ -40,62 +40,85 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "test performance: \n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/ritish/prog/ML/.venv/lib/python3.13/site-packages/numpy/_core/fromnumeric.py:3860: RuntimeWarning: Mean of empty slice.\n",
-      "  return _methods._mean(a, axis=axis, dtype=dtype,\n",
-      "/home/ritish/prog/ML/.venv/lib/python3.13/site-packages/numpy/_core/_methods.py:145: RuntimeWarning: invalid value encountered in scalar divide\n",
-      "  ret = ret.dtype.type(ret / rcount)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "task \t 0 \t steps \t 1000 \t episodes \t 5 \t eps \t 0.5500\tep_reward \t 10.0000 \t reward \t 10.0000\tGPI% \t 0.0000 \t w_err \t 9.9973\n",
       "test performance: \n",
-      "task \t 0 \t steps \t 2000 \t episodes \t 10 \t eps \t 0.5500\tep_reward \t 0.0000 \t reward \t 40.0000\tGPI% \t 0.0000 \t w_err \t 9.8496\n",
+      "task \t 0 \t steps \t 1000 \t episodes \t 5 \t eps \t 0.5500\tep_reward \t 10.0000 \t reward \t 20.0000\tGPI% \t 0.0000 \t w_err \t 10.0338\n",
       "test performance: \n",
-      "task \t 0 \t steps \t 3000 \t episodes \t 15 \t eps \t 0.5500\tep_reward \t 0.0000 \t reward \t 70.0000\tGPI% \t 0.0000 \t w_err \t 9.7041\n",
+      "task \t 0 \t steps \t 1000 \t episodes \t 5 \t eps \t 0.5500\tep_reward \t 10.0000 \t reward \t 20.0000\tGPI% \t 0.0000 \t w_err \t 10.0338\n",
       "test performance: \n",
-      "task \t 0 \t steps \t 4000 \t episodes \t 21 \t eps \t 0.5500\tep_reward \t 0.0000 \t reward \t 112.0000\tGPI% \t 0.0000 \t w_err \t 9.5125\n",
+      "task \t 0 \t steps \t 2000 \t episodes \t 10 \t eps \t 0.5500\tep_reward \t 0.0000 \t reward \t 60.0000\tGPI% \t 0.0000 \t w_err \t 9.9941\n",
       "test performance: \n",
-      "task \t 0 \t steps \t 5000 \t episodes \t 27 \t eps \t 0.5500\tep_reward \t 1.0000 \t reward \t 164.0000\tGPI% \t 0.0000 \t w_err \t 9.2786\n",
+      "task \t 0 \t steps \t 2000 \t episodes \t 10 \t eps \t 0.5500\tep_reward \t 0.0000 \t reward \t 60.0000\tGPI% \t 0.0000 \t w_err \t 9.9941\n",
       "test performance: \n",
-      "task \t 0 \t steps \t 6000 \t episodes \t 34 \t eps \t 0.5500\tep_reward \t 11.0000 \t reward \t 258.0000\tGPI% \t 0.0000 \t w_err \t 8.8719\n",
+      "task \t 0 \t steps \t 3000 \t episodes \t 15 \t eps \t 0.5500\tep_reward \t 20.0000 \t reward \t 90.0000\tGPI% \t 0.0000 \t w_err \t 9.9645\n",
       "test performance: \n",
-      "task \t 0 \t steps \t 7000 \t episodes \t 39 \t eps \t 0.5500\tep_reward \t 0.0000 \t reward \t 290.0000\tGPI% \t 0.0000 \t w_err \t 8.7400\n",
+      "task \t 0 \t steps \t 3000 \t episodes \t 15 \t eps \t 0.5500\tep_reward \t 20.0000 \t reward \t 90.0000\tGPI% \t 0.0000 \t w_err \t 9.9645\n",
       "test performance: \n",
-      "task \t 0 \t steps \t 8000 \t episodes \t 45 \t eps \t 0.5500\tep_reward \t 0.0000 \t reward \t 332.0000\tGPI% \t 0.0000 \t w_err \t 8.5675\n",
+      "task \t 0 \t steps \t 4000 \t episodes \t 20 \t eps \t 0.5500\tep_reward \t 10.0000 \t reward \t 130.0000\tGPI% \t 0.0000 \t w_err \t 9.9251\n",
       "test performance: \n",
-      "task \t 0 \t steps \t 9000 \t episodes \t 50 \t eps \t 0.5500\tep_reward \t 10.0000 \t reward \t 412.0000\tGPI% \t 0.0000 \t w_err \t 8.2349\n",
+      "task \t 0 \t steps \t 4000 \t episodes \t 20 \t eps \t 0.5500\tep_reward \t 10.0000 \t reward \t 130.0000\tGPI% \t 0.0000 \t w_err \t 9.9251\n",
       "test performance: \n",
-      "task \t 0 \t steps \t 10000 \t episodes \t 55 \t eps \t 0.5500\tep_reward \t 20.0000 \t reward \t 463.0000\tGPI% \t 0.0000 \t w_err \t 8.0333\n",
+      "task \t 0 \t steps \t 5000 \t episodes \t 25 \t eps \t 0.5500\tep_reward \t 10.0000 \t reward \t 170.0000\tGPI% \t 0.0000 \t w_err \t 9.8858\n",
       "test performance: \n",
-      "task \t 0 \t steps \t 11000 \t episodes \t 61 \t eps \t 0.5500\tep_reward \t 20.0000 \t reward \t 514.0000\tGPI% \t 0.0000 \t w_err \t 7.8367\n",
+      "task \t 0 \t steps \t 5000 \t episodes \t 25 \t eps \t 0.5500\tep_reward \t 10.0000 \t reward \t 170.0000\tGPI% \t 0.0000 \t w_err \t 9.8858\n",
       "test performance: \n",
-      "task \t 0 \t steps \t 12000 \t episodes \t 66 \t eps \t 0.5500\tep_reward \t 10.0000 \t reward \t 584.0000\tGPI% \t 0.0000 \t w_err \t 7.5704\n",
+      "task \t 0 \t steps \t 6000 \t episodes \t 30 \t eps \t 0.5500\tep_reward \t 10.0000 \t reward \t 230.0000\tGPI% \t 0.0000 \t w_err \t 9.8273\n",
       "test performance: \n",
-      "task \t 0 \t steps \t 13000 \t episodes \t 71 \t eps \t 0.5500\tep_reward \t 10.0000 \t reward \t 644.0000\tGPI% \t 0.0000 \t w_err \t 7.3496\n",
+      "task \t 0 \t steps \t 6000 \t episodes \t 30 \t eps \t 0.5500\tep_reward \t 10.0000 \t reward \t 230.0000\tGPI% \t 0.0000 \t w_err \t 9.8273\n",
       "test performance: \n",
-      "task \t 0 \t steps \t 14000 \t episodes \t 76 \t eps \t 0.5500\tep_reward \t 10.0000 \t reward \t 685.0000\tGPI% \t 0.0000 \t w_err \t 7.2054\n",
+      "task \t 0 \t steps \t 7000 \t episodes \t 36 \t eps \t 0.5500\tep_reward \t 20.0000 \t reward \t 322.0000\tGPI% \t 0.0000 \t w_err \t 9.7399\n",
       "test performance: \n",
-      "task \t 0 \t steps \t 15000 \t episodes \t 81 \t eps \t 0.5500\tep_reward \t 0.0000 \t reward \t 757.0000\tGPI% \t 0.0000 \t w_err \t 6.9600\n",
+      "task \t 0 \t steps \t 7000 \t episodes \t 36 \t eps \t 0.5500\tep_reward \t 20.0000 \t reward \t 322.0000\tGPI% \t 0.0000 \t w_err \t 9.7399\n",
       "test performance: \n",
-      "task \t 0 \t steps \t 16000 \t episodes \t 86 \t eps \t 0.5500\tep_reward \t 20.0000 \t reward \t 827.0000\tGPI% \t 0.0000 \t w_err \t 6.7243\n",
+      "task \t 0 \t steps \t 8000 \t episodes \t 43 \t eps \t 0.5500\tep_reward \t 20.0000 \t reward \t 407.0000\tGPI% \t 0.0000 \t w_err \t 9.6625\n",
       "test performance: \n",
-      "task \t 0 \t steps \t 17000 \t episodes \t 91 \t eps \t 0.5500\tep_reward \t 0.0000 \t reward \t 877.0000\tGPI% \t 0.0000 \t w_err \t 6.5610\n",
+      "task \t 0 \t steps \t 8000 \t episodes \t 43 \t eps \t 0.5500\tep_reward \t 20.0000 \t reward \t 407.0000\tGPI% \t 0.0000 \t w_err \t 9.6625\n",
       "test performance: \n",
-      "task \t 0 \t steps \t 18000 \t episodes \t 96 \t eps \t 0.5500\tep_reward \t 10.0000 \t reward \t 957.0000\tGPI% \t 0.0000 \t w_err \t 6.3083\n",
+      "task \t 0 \t steps \t 9000 \t episodes \t 49 \t eps \t 0.5500\tep_reward \t 30.0000 \t reward \t 510.0000\tGPI% \t 0.0000 \t w_err \t 9.5670\n",
       "test performance: \n",
-      "task \t 0 \t steps \t 19000 \t episodes \t 101 \t eps \t 0.5500\tep_reward \t 10.0000 \t reward \t 1027.0000\tGPI% \t 0.0000 \t w_err \t 6.0956\n",
+      "task \t 0 \t steps \t 9000 \t episodes \t 49 \t eps \t 0.5500\tep_reward \t 30.0000 \t reward \t 510.0000\tGPI% \t 0.0000 \t w_err \t 9.5670\n",
       "test performance: \n",
-      "task \t 0 \t steps \t 20000 \t episodes \t 107 \t eps \t 0.5500\tep_reward \t 21.0000 \t reward \t 1108.0000\tGPI% \t 0.0000 \t w_err \t 5.8608\n"
+      "task \t 0 \t steps \t 10000 \t episodes \t 54 \t eps \t 0.5500\tep_reward \t 21.0000 \t reward \t 613.0000\tGPI% \t 0.0000 \t w_err \t 9.4725\n",
+      "test performance: \n",
+      "task \t 0 \t steps \t 10000 \t episodes \t 54 \t eps \t 0.5500\tep_reward \t 21.0000 \t reward \t 613.0000\tGPI% \t 0.0000 \t w_err \t 9.4725\n",
+      "test performance: \n",
+      "task \t 0 \t steps \t 11000 \t episodes \t 60 \t eps \t 0.5500\tep_reward \t 40.0000 \t reward \t 704.0000\tGPI% \t 0.0000 \t w_err \t 9.3884\n",
+      "test performance: \n",
+      "task \t 0 \t steps \t 11000 \t episodes \t 60 \t eps \t 0.5500\tep_reward \t 40.0000 \t reward \t 704.0000\tGPI% \t 0.0000 \t w_err \t 9.3884\n",
+      "test performance: \n",
+      "task \t 0 \t steps \t 12000 \t episodes \t 66 \t eps \t 0.5500\tep_reward \t 20.0000 \t reward \t 826.0000\tGPI% \t 0.0000 \t w_err \t 9.2774\n",
+      "test performance: \n",
+      "task \t 0 \t steps \t 12000 \t episodes \t 66 \t eps \t 0.5500\tep_reward \t 20.0000 \t reward \t 826.0000\tGPI% \t 0.0000 \t w_err \t 9.2774\n",
+      "test performance: \n",
+      "task \t 0 \t steps \t 13000 \t episodes \t 71 \t eps \t 0.5500\tep_reward \t 20.0000 \t reward \t 908.0000\tGPI% \t 0.0000 \t w_err \t 9.2040\n",
+      "test performance: \n",
+      "task \t 0 \t steps \t 13000 \t episodes \t 71 \t eps \t 0.5500\tep_reward \t 20.0000 \t reward \t 908.0000\tGPI% \t 0.0000 \t w_err \t 9.2040\n",
+      "test performance: \n",
+      "task \t 0 \t steps \t 14000 \t episodes \t 76 \t eps \t 0.5500\tep_reward \t 20.0000 \t reward \t 1029.0000\tGPI% \t 0.0000 \t w_err \t 9.0953\n",
+      "test performance: \n",
+      "task \t 0 \t steps \t 14000 \t episodes \t 76 \t eps \t 0.5500\tep_reward \t 20.0000 \t reward \t 1029.0000\tGPI% \t 0.0000 \t w_err \t 9.0953\n",
+      "test performance: \n",
+      "task \t 0 \t steps \t 15000 \t episodes \t 83 \t eps \t 0.5500\tep_reward \t 21.0000 \t reward \t 1153.0000\tGPI% \t 0.0000 \t w_err \t 8.9876\n",
+      "test performance: \n",
+      "task \t 0 \t steps \t 15000 \t episodes \t 83 \t eps \t 0.5500\tep_reward \t 21.0000 \t reward \t 1153.0000\tGPI% \t 0.0000 \t w_err \t 8.9876\n",
+      "test performance: \n",
+      "task \t 0 \t steps \t 16000 \t episodes \t 90 \t eps \t 0.5500\tep_reward \t 21.0000 \t reward \t 1300.0000\tGPI% \t 0.0000 \t w_err \t 8.8633\n",
+      "test performance: \n",
+      "task \t 0 \t steps \t 16000 \t episodes \t 90 \t eps \t 0.5500\tep_reward \t 21.0000 \t reward \t 1300.0000\tGPI% \t 0.0000 \t w_err \t 8.8633\n",
+      "test performance: \n",
+      "task \t 0 \t steps \t 17000 \t episodes \t 95 \t eps \t 0.5500\tep_reward \t 21.0000 \t reward \t 1394.0000\tGPI% \t 0.0000 \t w_err \t 8.7844\n",
+      "test performance: \n",
+      "task \t 0 \t steps \t 17000 \t episodes \t 95 \t eps \t 0.5500\tep_reward \t 21.0000 \t reward \t 1394.0000\tGPI% \t 0.0000 \t w_err \t 8.7844\n",
+      "test performance: \n",
+      "task \t 0 \t steps \t 18000 \t episodes \t 102 \t eps \t 0.5500\tep_reward \t 21.0000 \t reward \t 1519.0000\tGPI% \t 0.0000 \t w_err \t 8.6803\n",
+      "test performance: \n",
+      "task \t 0 \t steps \t 18000 \t episodes \t 102 \t eps \t 0.5500\tep_reward \t 21.0000 \t reward \t 1519.0000\tGPI% \t 0.0000 \t w_err \t 8.6803\n",
+      "test performance: \n",
+      "task \t 0 \t steps \t 19000 \t episodes \t 109 \t eps \t 0.5500\tep_reward \t 11.0000 \t reward \t 1692.0000\tGPI% \t 0.0000 \t w_err \t 8.5354\n",
+      "test performance: \n",
+      "task \t 0 \t steps \t 19000 \t episodes \t 109 \t eps \t 0.5500\tep_reward \t 11.0000 \t reward \t 1692.0000\tGPI% \t 0.0000 \t w_err \t 8.5354\n",
+      "test performance: \n",
+      "task \t 0 \t steps \t 20000 \t episodes \t 115 \t eps \t 0.5500\tep_reward \t 30.0000 \t reward \t 1844.0000\tGPI% \t 0.0000 \t w_err \t 8.4096\n",
+      "task \t 0 \t steps \t 20000 \t episodes \t 115 \t eps \t 0.5500\tep_reward \t 30.0000 \t reward \t 1844.0000\tGPI% \t 0.0000 \t w_err \t 8.4096\n"
      ]
     }
    ],
@@ -105,14 +128,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "id": "9fa36ac0",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4f427ea77250494da91bf4ee0a10c2c8",
+       "model_id": "970db819c54c40d78890378237619a6d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -150,19 +173,11 @@
    "source": [
     "rewards = agent.test_agent(tasks[0], return_history=1, visualize=1)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b2d2a650",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
