--- a/main_sfdqn.ipynb
+++ b/main_sfdqn.ipynb
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "fd264980",
    "metadata": {},
    "outputs": [
@@ -123,12 +123,12 @@
     }
    ],
    "source": [
-    "agent, tasks = main()"
+    "agent,train_tasks,test_task = main()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "9fa36ac0",
    "metadata": {},
    "outputs": [
@@ -171,7 +171,7 @@
     }
    ],
    "source": [
-    "rewards = agent.test_agent(tasks[0], return_history=1, visualize=1)"
+    "rewards = agent.test_agent(test_tasks, return_history=1, visualize=1)"
    ]
   }
  ],
