--- a/main_sfdqn.ipynb
+++ b/main_sfdqn.ipynb
@@ -10,7 +10,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Using device: cuda\n"
+      "Using device: cpu\n"
      ]
     }
    ],
@@ -40,85 +40,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "test performance: \n",
-      "task \t 0 \t steps \t 1000 \t episodes \t 5 \t eps \t 0.5500\tep_reward \t 10.0000 \t reward \t 20.0000\tGPI% \t 0.0000 \t w_err \t 10.0338\n",
-      "test performance: \n",
-      "task \t 0 \t steps \t 1000 \t episodes \t 5 \t eps \t 0.5500\tep_reward \t 10.0000 \t reward \t 20.0000\tGPI% \t 0.0000 \t w_err \t 10.0338\n",
-      "test performance: \n",
-      "task \t 0 \t steps \t 2000 \t episodes \t 10 \t eps \t 0.5500\tep_reward \t 0.0000 \t reward \t 60.0000\tGPI% \t 0.0000 \t w_err \t 9.9941\n",
-      "test performance: \n",
-      "task \t 0 \t steps \t 2000 \t episodes \t 10 \t eps \t 0.5500\tep_reward \t 0.0000 \t reward \t 60.0000\tGPI% \t 0.0000 \t w_err \t 9.9941\n",
-      "test performance: \n",
-      "task \t 0 \t steps \t 3000 \t episodes \t 15 \t eps \t 0.5500\tep_reward \t 20.0000 \t reward \t 90.0000\tGPI% \t 0.0000 \t w_err \t 9.9645\n",
-      "test performance: \n",
-      "task \t 0 \t steps \t 3000 \t episodes \t 15 \t eps \t 0.5500\tep_reward \t 20.0000 \t reward \t 90.0000\tGPI% \t 0.0000 \t w_err \t 9.9645\n",
-      "test performance: \n",
-      "task \t 0 \t steps \t 4000 \t episodes \t 20 \t eps \t 0.5500\tep_reward \t 10.0000 \t reward \t 130.0000\tGPI% \t 0.0000 \t w_err \t 9.9251\n",
-      "test performance: \n",
-      "task \t 0 \t steps \t 4000 \t episodes \t 20 \t eps \t 0.5500\tep_reward \t 10.0000 \t reward \t 130.0000\tGPI% \t 0.0000 \t w_err \t 9.9251\n",
-      "test performance: \n",
-      "task \t 0 \t steps \t 5000 \t episodes \t 25 \t eps \t 0.5500\tep_reward \t 10.0000 \t reward \t 170.0000\tGPI% \t 0.0000 \t w_err \t 9.8858\n",
-      "test performance: \n",
-      "task \t 0 \t steps \t 5000 \t episodes \t 25 \t eps \t 0.5500\tep_reward \t 10.0000 \t reward \t 170.0000\tGPI% \t 0.0000 \t w_err \t 9.8858\n",
-      "test performance: \n",
-      "task \t 0 \t steps \t 6000 \t episodes \t 30 \t eps \t 0.5500\tep_reward \t 10.0000 \t reward \t 230.0000\tGPI% \t 0.0000 \t w_err \t 9.8273\n",
-      "test performance: \n",
-      "task \t 0 \t steps \t 6000 \t episodes \t 30 \t eps \t 0.5500\tep_reward \t 10.0000 \t reward \t 230.0000\tGPI% \t 0.0000 \t w_err \t 9.8273\n",
-      "test performance: \n",
-      "task \t 0 \t steps \t 7000 \t episodes \t 36 \t eps \t 0.5500\tep_reward \t 20.0000 \t reward \t 322.0000\tGPI% \t 0.0000 \t w_err \t 9.7399\n",
-      "test performance: \n",
-      "task \t 0 \t steps \t 7000 \t episodes \t 36 \t eps \t 0.5500\tep_reward \t 20.0000 \t reward \t 322.0000\tGPI% \t 0.0000 \t w_err \t 9.7399\n",
-      "test performance: \n",
-      "task \t 0 \t steps \t 8000 \t episodes \t 43 \t eps \t 0.5500\tep_reward \t 20.0000 \t reward \t 407.0000\tGPI% \t 0.0000 \t w_err \t 9.6625\n",
-      "test performance: \n",
-      "task \t 0 \t steps \t 8000 \t episodes \t 43 \t eps \t 0.5500\tep_reward \t 20.0000 \t reward \t 407.0000\tGPI% \t 0.0000 \t w_err \t 9.6625\n",
-      "test performance: \n",
-      "task \t 0 \t steps \t 9000 \t episodes \t 49 \t eps \t 0.5500\tep_reward \t 30.0000 \t reward \t 510.0000\tGPI% \t 0.0000 \t w_err \t 9.5670\n",
-      "test performance: \n",
-      "task \t 0 \t steps \t 9000 \t episodes \t 49 \t eps \t 0.5500\tep_reward \t 30.0000 \t reward \t 510.0000\tGPI% \t 0.0000 \t w_err \t 9.5670\n",
-      "test performance: \n",
-      "task \t 0 \t steps \t 10000 \t episodes \t 54 \t eps \t 0.5500\tep_reward \t 21.0000 \t reward \t 613.0000\tGPI% \t 0.0000 \t w_err \t 9.4725\n",
-      "test performance: \n",
-      "task \t 0 \t steps \t 10000 \t episodes \t 54 \t eps \t 0.5500\tep_reward \t 21.0000 \t reward \t 613.0000\tGPI% \t 0.0000 \t w_err \t 9.4725\n",
-      "test performance: \n",
-      "task \t 0 \t steps \t 11000 \t episodes \t 60 \t eps \t 0.5500\tep_reward \t 40.0000 \t reward \t 704.0000\tGPI% \t 0.0000 \t w_err \t 9.3884\n",
-      "test performance: \n",
-      "task \t 0 \t steps \t 11000 \t episodes \t 60 \t eps \t 0.5500\tep_reward \t 40.0000 \t reward \t 704.0000\tGPI% \t 0.0000 \t w_err \t 9.3884\n",
-      "test performance: \n",
-      "task \t 0 \t steps \t 12000 \t episodes \t 66 \t eps \t 0.5500\tep_reward \t 20.0000 \t reward \t 826.0000\tGPI% \t 0.0000 \t w_err \t 9.2774\n",
-      "test performance: \n",
-      "task \t 0 \t steps \t 12000 \t episodes \t 66 \t eps \t 0.5500\tep_reward \t 20.0000 \t reward \t 826.0000\tGPI% \t 0.0000 \t w_err \t 9.2774\n",
-      "test performance: \n",
-      "task \t 0 \t steps \t 13000 \t episodes \t 71 \t eps \t 0.5500\tep_reward \t 20.0000 \t reward \t 908.0000\tGPI% \t 0.0000 \t w_err \t 9.2040\n",
-      "test performance: \n",
-      "task \t 0 \t steps \t 13000 \t episodes \t 71 \t eps \t 0.5500\tep_reward \t 20.0000 \t reward \t 908.0000\tGPI% \t 0.0000 \t w_err \t 9.2040\n",
-      "test performance: \n",
-      "task \t 0 \t steps \t 14000 \t episodes \t 76 \t eps \t 0.5500\tep_reward \t 20.0000 \t reward \t 1029.0000\tGPI% \t 0.0000 \t w_err \t 9.0953\n",
-      "test performance: \n",
-      "task \t 0 \t steps \t 14000 \t episodes \t 76 \t eps \t 0.5500\tep_reward \t 20.0000 \t reward \t 1029.0000\tGPI% \t 0.0000 \t w_err \t 9.0953\n",
-      "test performance: \n",
-      "task \t 0 \t steps \t 15000 \t episodes \t 83 \t eps \t 0.5500\tep_reward \t 21.0000 \t reward \t 1153.0000\tGPI% \t 0.0000 \t w_err \t 8.9876\n",
-      "test performance: \n",
-      "task \t 0 \t steps \t 15000 \t episodes \t 83 \t eps \t 0.5500\tep_reward \t 21.0000 \t reward \t 1153.0000\tGPI% \t 0.0000 \t w_err \t 8.9876\n",
-      "test performance: \n",
-      "task \t 0 \t steps \t 16000 \t episodes \t 90 \t eps \t 0.5500\tep_reward \t 21.0000 \t reward \t 1300.0000\tGPI% \t 0.0000 \t w_err \t 8.8633\n",
-      "test performance: \n",
-      "task \t 0 \t steps \t 16000 \t episodes \t 90 \t eps \t 0.5500\tep_reward \t 21.0000 \t reward \t 1300.0000\tGPI% \t 0.0000 \t w_err \t 8.8633\n",
-      "test performance: \n",
-      "task \t 0 \t steps \t 17000 \t episodes \t 95 \t eps \t 0.5500\tep_reward \t 21.0000 \t reward \t 1394.0000\tGPI% \t 0.0000 \t w_err \t 8.7844\n",
-      "test performance: \n",
-      "task \t 0 \t steps \t 17000 \t episodes \t 95 \t eps \t 0.5500\tep_reward \t 21.0000 \t reward \t 1394.0000\tGPI% \t 0.0000 \t w_err \t 8.7844\n",
-      "test performance: \n",
-      "task \t 0 \t steps \t 18000 \t episodes \t 102 \t eps \t 0.5500\tep_reward \t 21.0000 \t reward \t 1519.0000\tGPI% \t 0.0000 \t w_err \t 8.6803\n",
-      "test performance: \n",
-      "task \t 0 \t steps \t 18000 \t episodes \t 102 \t eps \t 0.5500\tep_reward \t 21.0000 \t reward \t 1519.0000\tGPI% \t 0.0000 \t w_err \t 8.6803\n",
-      "test performance: \n",
-      "task \t 0 \t steps \t 19000 \t episodes \t 109 \t eps \t 0.5500\tep_reward \t 11.0000 \t reward \t 1692.0000\tGPI% \t 0.0000 \t w_err \t 8.5354\n",
-      "test performance: \n",
-      "task \t 0 \t steps \t 19000 \t episodes \t 109 \t eps \t 0.5500\tep_reward \t 11.0000 \t reward \t 1692.0000\tGPI% \t 0.0000 \t w_err \t 8.5354\n",
-      "test performance: \n",
-      "task \t 0 \t steps \t 20000 \t episodes \t 115 \t eps \t 0.5500\tep_reward \t 30.0000 \t reward \t 1844.0000\tGPI% \t 0.0000 \t w_err \t 8.4096\n",
-      "task \t 0 \t steps \t 20000 \t episodes \t 115 \t eps \t 0.5500\tep_reward \t 30.0000 \t reward \t 1844.0000\tGPI% \t 0.0000 \t w_err \t 8.4096\n"
+      "test performance: \n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/ap/miniconda3/envs/rl/lib/python3.10/site-packages/numpy/_core/fromnumeric.py:3860: RuntimeWarning: Mean of empty slice.\n",
+      "  return _methods._mean(a, axis=axis, dtype=dtype,\n",
+      "/home/ap/miniconda3/envs/rl/lib/python3.10/site-packages/numpy/_core/_methods.py:145: RuntimeWarning: invalid value encountered in scalar divide\n",
+      "  ret = ret.dtype.type(ret / rcount)\n"
      ]
     }
    ],
@@ -177,7 +109,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "rl",
    "language": "python",
    "name": "python3"
   },
@@ -191,7 +123,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.7"
+   "version": "3.10.18"
   }
  },
  "nbformat": 4,
