sfdqn_shapes_fixed(gpt)

--- a/main_sfdqn.ipynb
+++ b/main_sfdqn.ipynb
@@ -103,7 +103,7 @@
     }
    ],
    "source": [
-    "rewards = agent.test_agent(test_tasks, return_history=1, visualize=1)"
+    "rewards = agent.test_agent(test_task, return_history=1, visualize=1)"
    ]
   }
  ],
